# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_children.hrl, changing the interface and usage in
      cloudi_service_http_cowboy, cloudi_service_http_elli, and
      cloudi_service_tcp
    * Make the cloudi_service_monitoring queued_requests_size more accurate

2015-12-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make cloudi_service_monitoring track reductions as a total count while
      providing the metric as a change during the interval in a spiral
    * Add cloudi_timestamp:milliseconds/0 and
      simplify cloudi_timestamp:seconds/0

2015-12-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Split cloudi_service_monitoring service process metric names based
      on whether the service is internal or external, to show either
      process information or process/thread information, respectively
    * Add queued_requests, queued_requests_size, queued_info metrics
      in cloudi_service_monitoring for all service processes
    * Set cloudi_service_monitoring default intervals at 15 seconds and
      handle reporter options
    * Fix rebar usage within autoconf/automake
      when not using a separate build directory
    * Fix system message handling on duo_mode process
    * Update pqueue

2015-12-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_monitoring with dependencies
      (exometer, exometer_core, folsom, bear, setup, parse_trans)
    * Add {{M, F}} syntax for dynamic creation of anonymous functions
      in both service function arguments and
      the aspect service configuration options
    * Add the service_id in the process dictionary of long-lived
      service processes for easy identification during their lifetime
    * Remove the hyphens from service_id usage within CloudI so that
      service_id usage in metric names match service_ids elsewhere
    * Update lager and goldrush