@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2015-12-21 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Modify cloudi_service_monitoring to provide incoming and outgoing
+      request data with separate metrics
+    * Fix a false negative dialyzer error in cloudi_service_children.hrl
+
 2015-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix cloudi_service_children.hrl, changing the interface and usage in
